complete confirm email func
